# PontoBR

./: package-lock.json  package.json  requirements.txt
src/app/auth/login/: page.tsx
src/app/auth/sign-up/: page.tsx
src/backend/: conftest.py  pyproject.toml  pytest.ini
src/backend/pontobr/: manage.py
src/backend/pontobr/authentication/: asgi.py  models.py  settings.py
src/backend/pontobr/authentication/tests/: test_jwt_token.py  test_login.py  test_registration.py
src/backend/pontobr/pontobr/: models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
