[tool.poetry]
name = "pontobr-backend"
version = "0.1.0"
description = "Django Backend para o pontoBR"
authors = ["castroofelipee <castroofelipee19@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
