[tool.poetry]
name = "pontobr-backend"
version = "0.1.0"
description = "Django Backend para o pontoBR"
authors = ["castroofelipee <castroofelipee19@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
pytest = "^8.3.4"
djangorestframework-simplejwt = "^5.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
